anneal/vendor/ui_test/examples_tests/rustc_basic/hello.rs
fn main() {
    println("hello world")
    //~^ ERROR: expected function, found macro `println`
}
